# SEM2PRO

./: .gitignore  Remaining_todos.txt  Todo.txt  netsetup.sh  time_table.xlsx
Datasheets/sevcon/: Read_from_sevcon.dcf
Eagle/CAN-bus/: can-bus_trancseiver.brd  can-bus_trancseiver.sch
SDK Echo Test/: design_1_wrapper.hdf
SDK Echo Test/.metadata/: version.ini
SDK Echo Test/Echo/: .cproject  .project
SDK Echo Test/Echo_bsp/: .cproject  .project  system.mss
SDK Echo Test/Whatever/: .cproject  .project
SDK Echo Test/Whatever_bsp/: .cproject  .project
SDK Echo Test/design_1_wrapper_hw_platform_0/: .project  design_1_wrapper.bit  ps7_init.c  ps7_init.html  ps7_init.tcl  ps7_init_gpl.c  ps7_parameters.xml
SDK Echo Test/webtalk/: sdk_webtalk.tcl  sdk_webtalk.wdm  usage_statistics_ext_sdk.html  usage_statistics_ext_sdk.xml  webtalk.jou  webtalk_7572.backup.jou  webtalk_8028.backup.jou
Vivado/: test_bitwise.c
Vivado/can_network_v2/: can_network_v2.xpr
Vivado/can_network_v3/: can_network_v3.xpr
Vivado/can_test/: can_test.xpr
code/: m_netsetup.sh  netsetup.sh  template.c  template.h
code/backend/: CMakeLists.txt
code/backend/include/: backend.hpp  interpreter.hpp  ui.hpp
code/backend/src/: backend.cpp  fifo.cpp  interpreter.cpp  main.cpp  receiver.cpp  ui.cpp
code/client/: CMakeLists.txt
code/client/include/: client.hpp
code/client/src/: client.cpp  client_.cpp  main.cpp
code/frontend/: CMakeLists.txt
code/frontend/include/: fifo.hpp  frontend.hpp  receiver.hpp  ui.hpp
code/frontend/src/: fifo.cpp  frontend.cpp  main.cpp  ui.cpp
code/gps_code/: gps_program.c  gps_program.h
code/node/: sem  sem.c  sem.h
code/sensornode/: CMakeLists.txt
code/sensornode/data/: ba
code/sensornode/include/: canlink.hpp  data_packed.hpp  data_packet.hpp  gps.hpp  node.hpp  packer.hpp  protocol.hpp
code/sensornode/src/: canlink.cpp  gps.cpp  main.cpp  node.cpp  packer.cpp  protocol.cpp
code/server/: CMakeLists.txt
code/server/include/: server.hpp  session.hpp
code/server/src/: main.cpp  server.cpp  session.cpp
code/thread/: tread.cpp
code/verification/: CMakeLists.txt
code/zybo/: main.cpp  main.hpp  node.cpp  node.hpp  packer.cpp
data/: Object Dictionary.xlsx  gps_test_data.txt  gps_test_data_with_startup.txt  node_output_data  wifi_test_data
literature/: mikkel_links.txt
report/: bib.tex  introduction.tex  main.aux  main.out  main.tex  main.toc
report/appendixes/: OD.tex  adding_nodes.tex  usecases.tex
report/formalia/: acronyms.tex
report/graphics/: CAN_frame.eps  CAN_protocol_general.eps  Clarke-park_resampled.eps  analysis_complex.eps  analysis_gps.eps  analysis_nodes.eps  backend_concept.eps  backend_message.eps  basic_network.eps  can_test.eps  canbus_setup.eps  frontend_verification.eps  sensor_gps_veri.eps  stationary_software.eps  (+2 more)
(+617 files in other folders)
